.infrastructure/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: todoapp
spec:
  selector:
    app: todoapp
  ports:
    - port: 80
      targetPort: 8080
